--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0",
     "@tenderly/hardhat-tenderly": "^1.0.13",
     "dotenv": "^16.0.0",
     "hardhat": "^2.9.3"
