--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0",
     "@tenderly/hardhat-tenderly": "^1.0.13",
+    "@uniswap/smart-order-router": "^2.5.26",
     "dotenv": "^16.0.0",
     "hardhat": "^2.9.3"
   },
